# code-index-mcp

./: .env.example  .gitattributes  .gitignore  README.md  generate_embeddings.py  pyproject.toml  requirements.txt  run.py  run_streamlit.py
docs/: CLI.md  IMPLEMENTATION.md  QUICK_START.md  README.md
docs/integration/: claude.md
scripts/: install.ps1  install.sh  start_indexer.ps1  start_indexer.sh
src/code_index_mcp/: __init__.py  __main__.py  server.py
src/code_index_mcp/cli/: __init__.py  commands.py
src/code_index_mcp/core/: __init__.py  embedding_manager.py  watcher.py
src/code_index_mcp/embedder/: README.md  __init__.py  embedder.py  embedding_models.py  guardrails.py  schema.py  search.py  storage.py  text_processor.py  tools.py
src/code_index_mcp/server/: __init__.py  server.py
src/code_index_mcp/web/: __init__.py  __main__.py  streamlit_app.py
tests/: __init__.py  test_embedder.py  test_embedding_manager.py  test_server.py
